# Operations_Warehouse_Django

./: .gitignore  AGENTS.md  CHANGELOG  README.md
Operations_Warehouse_Django/: Makefile  Proposed Roadmap to Badges Combination - Badge-Prerequisite.csv  Proposed Roadmap to Badges Combination - Roadmap-Badge.csv  Roadmap and badge composition of resources - Sheet1.csv  manage.py  pyproject.toml  pytest.ini  test_json_sample.py  upload_roadmap_badge_status_cvs.py
Operations_Warehouse_Django/Operations_Warehouse_Django/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Operations_Warehouse_Django/allocations/: admin.py  models.py  serializers.py  urls.py  views.py
Operations_Warehouse_Django/beta/: serializers.py  urls.py  views.py
Operations_Warehouse_Django/cider/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  utils.py  views.py
Operations_Warehouse_Django/coco/: apps.py
Operations_Warehouse_Django/docs/: authorization_design.md
Operations_Warehouse_Django/glue2/: admin.py  apps.py  models.py  process.py  serializers.py  urls.py  views.py
Operations_Warehouse_Django/integration_badges/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
Operations_Warehouse_Django/integration_views/: apps.py  serializers.py  urls.py  views.py
Operations_Warehouse_Django/news/: admin.py  models.py  serializers.py  urls.py  views.py
Operations_Warehouse_Django/resource_pivot/: views.py
Operations_Warehouse_Django/resource_v3/: admin.py  models.py
Operations_Warehouse_Django/resource_v3.disabled/: apps.py  models.py
(+170 files in other folders)
